- Fix small layout bug. - Add readme.txt with quick overview for developers.

--- a/@dev-css/cs-cloning.scss
+++ b/@dev-css/cs-cloning.scss
@@ -2,13 +2,6 @@
  * CSS rules for the cloning module.
  */
 
-.button .dashicons {
-	line-height: 26px;
-	height: 26px;
-	float: left;
-	margin-right: 6px;
-}
-
 .widget-control-actions .csb-clone-button {
 	margin: 0 5px 0 0;
 }
