--- a/@dev-css/cs-visibility.scss
+++ b/@dev-css/cs-visibility.scss
@@ -2,13 +2,6 @@
  * CSS rules for the visibility module.
  */
 
-.button .dashicons {
-	line-height: 26px;
-	height: 26px;
-	float: left;
-	margin-right: 6px;
-}
-
 .widget-control-actions .csb-visibility-button {
 	margin: 0 5px 0 0;
 }
