--- a/@dev-css/cs.scss
+++ b/@dev-css/cs.scss
@@ -488,6 +488,14 @@ body.appearance_page_customsidebars #poststuff h2 {
 	opacity: 1;
 }
 
+.csb .button .dashicons,
+.csb .button-primary .dashicons {
+	line-height: 26px;
+	height: 26px;
+	float: left;
+	margin-right: 6px;
+}
+
 
 /**
  * =============================================================================
